--- a/VODPlayer/MainPage.xaml
+++ b/VODPlayer/MainPage.xaml
@@ -1,15 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="VODPlayer.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VODPlayer"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+  x:Class="VODPlayer.MainPage"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:local="using:VODPlayer"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  mc:Ignorable="d"
+  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+  KeyboardAcceleratorPlacementMode="Hidden">
 
-    <Grid>
-
-    </Grid>
+  <Page.KeyboardAccelerators>
+    <KeyboardAccelerator Key="Space" Invoked="MediaPlayerStateKeyboardAccelerator_Invoked" />
+  </Page.KeyboardAccelerators>
+  
+  <Page.Resources>
+    <local:BoolToInvertedVisibilityConverter x:Key="BoolToInvertedVisibilityConverter" />
+  </Page.Resources>
+  
+  <Grid Background="Transparent">
+    <SplitView 
+      IsPaneOpen="{x:Bind IsPaneOpen, Mode=OneWay}"
+      CompactPaneLength="0"
+      OpenPaneLength="340"
+      DisplayMode="CompactInline"
+      PanePlacement="Right">
+      <SplitView.Pane>
+        <StackPanel Orientation="Vertical" BorderThickness="1 0 0 0" BorderBrush="{ThemeResource CircleElevationBorderBrush}">
+          <Grid Padding="10 0 10 0" Height="50" BorderThickness="0 0 0 1" BorderBrush="{ThemeResource CircleElevationBorderBrush}">
+            <TextBlock Text="STREAM CHAT" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="SemiBold"/>
+            <Button Command="{x:Bind PanelOpenCommand, Mode=OneTime}" CornerRadius="0">
+              <FontIcon Glyph="&#xE89F;"/>
+            </Button>
+          </Grid>
+        </StackPanel>
+      </SplitView.Pane>
+      <Grid>
+        <MediaPlayerElement x:Name="MediaPlayer" AreTransportControlsEnabled="True" AutoPlay="False" Tapped="MediaPlayer_Tapped" DoubleTapped="MediaPlayer_DoubleTapped">
+          <MediaPlayerElement.TransportControls>
+            <MediaTransportControls IsCompact="True"/>
+          </MediaPlayerElement.TransportControls>
+        </MediaPlayerElement>
+        <Button 
+          Command="{x:Bind PanelOpenCommand, Mode=OneTime}" 
+          Visibility="{x:Bind IsPaneOpen, Converter={StaticResource BoolToInvertedVisibilityConverter}, Mode=OneWay}"  
+          Opacity=".5" 
+          Margin="5" 
+          HorizontalAlignment="Right" 
+          VerticalAlignment="Top" 
+          CornerRadius="0">
+          <FontIcon Glyph="&#xE8A0;"/>
+        </Button>
+      </Grid>
+    </SplitView>
+  </Grid>
 </Page>
